--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="arrow-left"></div>
         <div class="arrow-right"></div>
     </div>
-    <audio id="audio" src="C:\Users\Afriza\Downloads\ForWorkFile\ForworkFile\asset\music\Pamungkas - Happy Birthday To You (Official Lyrics Video).mp3"></audio>
+    <audio id="audio" src="./asset/music/Pamungkas - Happy Birthday To You (Official Lyrics Video).mp3"></audio>
 
     <div class="message-box-1" onclick="swap2()">
 
