--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="arrow-left"></div>
         <div class="arrow-right"></div>
     </div>
-    <audio id="audio" src="https://github.com/Afriza22/web.github.io/blob/main/asset/music/Pamungkas%20-%20Happy%20Birthday%20To%20You%20(Official%20Lyrics%20Video).mp3"></audio>
+    <audio id="audio" src="https://github.com/Afriza22/web.github.io/blob/main/asset/music/music.mp3.mp3"></audio>
 
     <div class="message-box-1" onclick="swap2()">
 
